# swc-require-rename

./: .gitignore  Cargo.toml  README.md  package.json
src/: lib.rs
