[package]
name = "require_rename"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"


[dependencies]
swc_atoms = "0.4.39"
serde_json = "1.0.79"
swc_common = {version = "0.29.37", features = ["concurrent"]}
swc_core = {version = "0.69.0", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "common",
]}

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
